--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  border: 1px solid #000;
+
 }
 
 .App-logo {
@@ -29,12 +30,14 @@
 }
 
 .pdfHold {
-  width: 100%;
-  margin:auto;
-  border: 1px solid #000;
-  display: inline-block
-  /* overflow: scroll; */
+  display: flex;
+  flex-direction: column;
+align-items: center;
+
+
 }
+
+
 
 
 
